--- a/src/main/webapp/WEB-INF/resources/css/footer.css
+++ b/src/main/webapp/WEB-INF/resources/css/footer.css
@@ -208,7 +208,6 @@
 
 .about-section .content-column .inner-column{
 	position:relative;
-	padding-top:50px;
 	padding-right:100px;
 }
 
@@ -234,6 +233,7 @@
 .about-section .image-column{
 	position:relative;
 	margin-bottom:50px;
+	margin-top:55px;
 }
 
 .about-section .image-column .inner-column{
@@ -356,6 +356,14 @@
     width: 40px;
     height: 1px;
     background-color: #bbbbbb;
+}
+
+.text table {
+	margin-left: 30px;
+}
+
+.text table td:first-child {
+	width: 100px;
 }
 
 /* footer- Contact Us */
@@ -611,6 +619,7 @@
 	display: block;
 	background: #131313;
 	padding: 85px 30px 77px;
+	width: 433px;
 }
 
 .single-contact-address-box .icon-holder {
