--- a/src/main/webapp/WEB-INF/resources/css/member/login.css
+++ b/src/main/webapp/WEB-INF/resources/css/member/login.css
@@ -19,7 +19,7 @@ body{
     position: absolute;
     transform: translate(-50%,-50%);
     left: 50%;
-    top: 60%;
+    top: 58%;
 }
 .background .shape{
     height: 200px;
@@ -46,7 +46,7 @@ body{
 }
 
 #loginform {
-    height: 480px;
+    height: 603px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
@@ -117,27 +117,16 @@ button{
 
 .social{
   margin-top: 30px;
-  display: flex;
-}
-.social div{
-  background: red;
-  width: 150px;
-  border-radius: 3px;
-  padding: 5px 10px 10px 5px;
-  background-color: rgba(255,255,255,0.27);
-  color: #eaf0fb;
-  text-align: center;
-}
-.social div:hover{
-  background-color: rgba(255,255,255,0.47);
-}
-.social .fb{
-  margin-left: 25px;
-}
-.social i{
-  margin-right: 4px;
+  justify-content: center;
 }
 
+#naverIdLogin, #kakaoIdLogin {
+	text-align: center;
+}
+
+#naverIdLogin {
+	margin-top: -10px;
+}
 
 /* footer */
 .footer {
