--- a/src/main/webapp/WEB-INF/resources/css/member/login.css
+++ b/src/main/webapp/WEB-INF/resources/css/member/login.css
@@ -46,7 +46,7 @@ body{
 }
 
 #loginform {
-    height: 603px;
+    height: 580px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
@@ -115,17 +115,24 @@ button{
 	background-color: #c8c8c8;
 }
 
-.social{
-  margin-top: 30px;
+.social-login{
+  display: flex;
   justify-content: center;
 }
 
-#naverIdLogin, #kakaoIdLogin {
-	text-align: center;
+#dd{margin-top:20px; display:flex;}
+#dd hr {
+	width: 100px;
+	height: 1px;
+	margin-top: 9px;
+	margin-left: 7px;
+	border: 1px solid #c8c8c8;
+	padding: 0 13px;
 }
 
-#naverIdLogin {
-	margin-top: -10px;
+#naver, #kakao, #google {
+	width: 50px;
+	height: 50px;
 }
 
 /* footer */
