--- a/src/main/webapp/WEB-INF/resources/css/total_ent/total_ent_booking_detail.css
+++ b/src/main/webapp/WEB-INF/resources/css/total_ent/total_ent_booking_detail.css
@@ -80,3 +80,7 @@ body {
 .booking-form .prevbutton:hover {
 	background-color: #646464;
 }
+
+.booking-form table td:first-child {
+	width: 90px;
+}
