--- a/src/main/webapp/WEB-INF/resources/css/member/review.css
+++ b/src/main/webapp/WEB-INF/resources/css/member/review.css
@@ -43,6 +43,10 @@
     cursor: pointer;
 }
 
+.btn:hover{
+	background-color: #c8c8c8;
+}
+
 .rcontainer {
    margin-top: 80px;
    margin-left: 30px;
